# Robo_sub-2026

./: README.md  test.txt
fog_test/: fog.py
ht_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ht_core/ht_core/missions/: best_mission.py
install/: local_setup.sh  setup.sh
install/ht_core/lib/ht_core/: depth_node
install/ht_core/share/ht_core/: package.ps1  package.sh
install/ht_messages/include/ht_messages/ht_messages/msg/: example.h  example.hpp  (+4 more)
install/ht_messages/share/ht_messages/: local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
install/ht_messages/share/ht_messages/cmake/: export_ht_messages__rosidl_generator_cExport.cmake  export_ht_messages__rosidl_generator_pyExport.cmake  export_ht_messages__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake-extras.cmake
install/my_gyro_pkg/lib/my_gyro_pkg/: fog_node
install/my_gyro_pkg/share/my_gyro_pkg/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
my_gyro_pkg/: setup.py
src/ht_core/ht_core/: state_machine.py
src/ht_core/ht_core/missions/: bravo2.py  charlie2.py
src/ht_messages/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh
src/install/ht_core/lib/ht_core/: mission_node
src/install/ht_core/share/ht_core/: package.bash  package.dsv  package.sh  package.zsh
src/install/ht_messages/share/ht_messages/: local_setup.dsv  local_setup.sh  package.bash  package.sh
src/install/my_gyro_pkg/share/my_gyro_pkg/: package.bash  package.sh  package.zsh
src/my_gyro_pkg/: setup.cfg
src/my_gyro_pkg/my_gyro_pkg/: fog.py
(+22 files in other folders)
